# classifai_test_gh_pages

./: .nojekyll  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  README.html  README.md  SECURITY.md  _quarto.yml  index.html  pyproject.toml  release-please-config.json  robots.txt  search.json  sitemap.xml  styles.css
.github/workflows/: ci.yml  publish_quarto_docs.yml  release-please.yml
DEMO/: README.html  README.md  custom_preprocessing_and_postprocessing_hooks.html  custom_preprocessing_and_postprocessing_hooks.ipynb  custom_vectoriser.html  custom_vectoriser.ipynb  general_workflow_demo.html  general_workflow_demo.ipynb
docs/: index.html  indexers.VectorStore.embed.html  indexers.VectorStore.from_filespace.html  indexers.VectorStore.html  indexers.VectorStore.reverse_search.html  indexers.VectorStore.search.html  indexers.dataclasses.VectorStoreEmbedInput.html  indexers.dataclasses.VectorStoreEmbedOutput.html  indexers.dataclasses.VectorStoreReverseSearchInput.html  indexers.dataclasses.VectorStoreReverseSearchOutput.html  indexers.dataclasses.VectorStoreSearchInput.html  indexers.dataclasses.VectorStoreSearchOutput.html  indexers.dataclasses.html  indexers.html  indexers.main.html  servers.get_router.html  servers.get_server.html  servers.html  servers.main.html  servers.make_endpoints.html  servers.run_server.html  vectorisers.base.VectoriserBase.html  vectorisers.base.VectoriserBase.transform.html  vectorisers.base.html  vectorisers.gcp.GcpVectoriser.html  vectorisers.html  vectorisers.huggingface.HuggingFaceVectoriser.html  vectorisers.ollama.OllamaVectoriser.html
site_libs/bootstrap/: bootstrap-468133874b2c61eea53cdcd323bdbaac.min.css
src/classifai/indexers/: __init__.py  dataclasses.py  main.py
src/classifai/servers/: __init__.py  main.py  pydantic_models.py
src/classifai/vectorisers/: __init__.py  gcp.py  huggingface.py  ollama.py
