[project]
name = "classifAI"
description = "A generalised, extendable and modular solution for LLM automated / assisted classification."
authors = [{name = "Data Science Campus", email = "datasciencecampus@ons.gov.uk"}]
readme = "README.md"
version = "0.4.0"
license = {file = "LICENSE"}
requires-python = ">=3.10,<4.0"
#dynamic = ["version"]
dependencies = [
    "uvicorn>0.34.0",
    "fastapi[standard]>=0.115.11",
    "numpy>=2.2.4",
    "polars>=1.26.0",
    "pandas>=2.3.0",
    "pydantic>=2.9.2",
    "tqdm>=4.67.1",
    "pandera[pandas]>=0.27.0",
    "fsspec>=2026.3.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[build-system]
requires = ["setuptools>=62"]
build-backend = "setuptools.build_meta"

#[tool.setuptools.dynamic]
#version = {attr = "classifai.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-data]
classifai = []

[tool.deptry.package_module_name_map]
google-genai = "google"

[project.optional-dependencies]
huggingface = [
    "transformers>=4.52.4",
    "torch>=2.7.1"
]
ollama = [
    "ollama>=0.5.1"
]
gcp = [
    "google-genai>=1.68.0",
    "gcsfs>=2026.4.0"
]
all = [
    "classifai[huggingface,gcp,ollama]"
]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    # Enabling ALL is not recommended it will implicitly enable new rules after upgrade.
    # "ALL",

    # Ruff rules: https://docs.astral.sh/ruff/rules/

    "E",      # pycodestyle erros
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "UP",     # pyupgrade
    "I",      # isort
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "C4",     # flake8-comprehensions
    "S",      # flake8-bandit
    "D",      # pydocstyle - Enforce existing docstrings only
    "C90",    # mccabe
    "RUF",    # Ruff specific rules

    # PL - Pylint is only partially supported, we also use the pylint tool to catch all the rules.
    # It is enabled here to take advantage of the ruff's speed.
    "PL",
]

ignore = [
    # Conflicts with google docstring style
    "D205",
    # Allow missing docstring, remove to enforce docstrings across the board
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    # Disable line length check as it is handled by black
    # :TODO: Remove E501 when ruff supports all black rules
    "E501",
    # indentation contains tabs
    "W191",
    "PLC0415",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    # Allow use of assert statements in tests
    "S101",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.deptry]
extend_exclude = ["DEMO"]

[tool.deptry.ignore]
DEP002 = ["gcsfs"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "nbstripout>=0.8.1",
    "pre-commit>=4.3.0",
    "ruff>=0.13.0",
    "pytest-cov >= 6.0.0",
    "bandit >= 1.8.3",
    "pytest >= 8.3.5",
    "mkdocs >= 1.6.1",
    "mkdocstrings >= 0.29.0",
    "mkdocstrings-python >= 1.16.7",
    "mkdocs-material >= 9.6.9",
    "deptry>=0.24.0",
    "quarto>=0.1.0",
    "quartodoc>=0.11.1",
    "numpydoc>=1.10.0",
    {include-group = "test"},
]
test = [
    "pytest>=8.4.2",
]

[project.urls]
homepage = "https://github.com/datasciencecampus/classifAI"
